<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnBack" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:src="@drawable/heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/clImage"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_226dp"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            app:cardCornerRadius="@dimen/dimen_16dp"
            app:cardElevation="@dimen/dimen_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/coffee1" />

        </androidx.cardview.widget.CardView>


        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:textColor="@color/header_text_rv"
            android:textSize="@dimen/ts_20sp"
            app:layout_constraintStart_toStartOf="@id/btnBack"
            app:layout_constraintTop_toBottomOf="@id/clImage"
            app:textType="Bold"
            tools:text="Cappucino" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/tvWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/with"
            android:textColor="@color/with_color"
            android:textSize="@dimen/ts_16sp"
            app:layout_constraintStart_toStartOf="@id/tvHeader"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            app:textType="Semibold" />

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/blue_grey"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWith" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/asciiTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/description"
            android:textColor="@color/header_text_rv"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:textType="Semibold" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/tvDesc"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/desc"
            android:textColor="@color/with_color"
            android:textSize="@dimen/ts_16sp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/asciiTextView2"
            app:layout_constraintTop_toBottomOf="@+id/asciiTextView2"
            app:textType="" />


        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/asciiTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/size"
            android:textColor="@color/header_text_rv"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:textType="Semibold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asciiTextView3">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_43dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/small"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_43dp"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/medium"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_43dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/large"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/tvPriceHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="@id/radioGroup"
            android:text="@string/price"
            app:textType="Regular"
            android:textColor="@color/with_color"
            android:textSize="@dimen/ts_18sp"
            android:layout_marginTop="@dimen/dimen_16dp" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:id="@+id/asciiTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ascii_brown_button"
            android:textSize="@dimen/ts_18sp"
            app:layout_constraintStart_toStartOf="@id/tvPriceHeader"
            app:layout_constraintTop_toBottomOf="@id/tvPriceHeader"
            app:textType="Bold"
            android:text="$ 4.23" />

        <com.portal.asciiproject.utilities.customviews.AsciiContinueButton
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_70dp"
            android:text="@string/buy_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/asciiTextView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>