<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_248dp"
        android:background="@drawable/bg_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.portal.asciiproject.utilities.customviews.AsciiTextView
        android:id="@+id/tvLocationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/location"
        android:textColor="@color/locationcolor"
        android:textSize="@dimen/ts_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cvProfilePhoto"
        app:textType="Regular" />

    <com.portal.asciiproject.utilities.customviews.AsciiTextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/locationcolr"
        android:textSize="@dimen/ts_14sp"
        app:layout_constraintStart_toStartOf="@id/tvLocationHeader"
        app:layout_constraintTop_toBottomOf="@id/tvLocationHeader"
        tools:text="Atasehir, Istanbul" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfilePhoto"
        android:layout_width="@dimen/dimen_48dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profilecat" />
    </androidx.cardview.widget.CardView>


    <com.portal.asciiproject.utilities.customviews.CustomSearchView
        android:id="@+id/svCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvLocation"
        app:layout_constraintTop_toBottomOf="@id/tvLocation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFreeBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svCoffee">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/coffeetest" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/bg_promo"
            android:paddingHorizontal="@dimen/dimen_6dp"
            android:paddingVertical="@dimen/dimen_4dp"
            android:text="@string/promo"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_16sp"
            app:textType="Semibold" />

        <com.portal.asciiproject.utilities.customviews.AsciiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginTop="@dimen/dimen_56dp"
            android:background="@drawable/bg_free_rounded"
            android:paddingHorizontal="@dimen/dimen_4dp"
            android:paddingVertical="@dimen/dimen_2dp"
            android:text="@string/buy_free"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_24sp"
            app:textType="Bold_underlined" />
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvFreeBuy">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_43dp"
            android:layout_marginHorizontal="@dimen/dimen_4dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/cappucino"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="@dimen/dimen_70dp"
            android:layout_height="@dimen/dimen_43dp"
            android:layout_marginHorizontal="@dimen/dimen_4dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/mocha"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_43dp"
            android:layout_marginHorizontal="@dimen/dimen_4dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/americano"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_43dp"
            android:layout_marginHorizontal="@dimen/dimen_4dp"
            android:background="@drawable/bg_radio_button"
            android:button="@null"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/latte"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTabs"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginHorizontal="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        tools:listitem="@layout/item_product" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/home_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/ascii_brown_button"
        app:itemTextColor="@color/ascii_brown_button"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>